Update link style2

--- a/finally-campaign.html
+++ b/finally-campaign.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 27 2017 22:55:35 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Nov 27 2017 23:13:47 GMT+0000 (UTC)  -->
 <html data-wf-page="5950132611e5b169565645fe" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div class="finally landingbanner projpage">
       <div class="fadeout logo"><a href="http://angelshiyaoyu.com" class="w-clearfix w-inline-block"><img src="images/Angel_Favicon_FadeOut-02.png" width="32" class="image-2"><div class="logotext projpage">angel yu</div></a></div>
       <div class="home nav"><a href="http://angel-yu.webflow.io/about" data-ix="new-interaction" class="home link projpage resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link projpage resume">resume / </a><a href="#Portfolio" class="home link projpage resume">work /</a></div>
-      <p class="projheading projpage">Finally <br>Campaign</p>
+      <p class="finally projheading projpage">Finally <br>Campaign</p>
       <div class="projpagediv roles w-clearfix">
         <p class="projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Client<br xmlns="http://www.w3.org/1999/xhtml"></span>Logitech<br><br><span class="bold projpage roles">Duration</span><br>2015–2016</p>
         <p class="projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Team</span><br>Angel Yu / Visual Design Lead<br>Nelson Ho / Creative Director<br>Developers<br>Content Strategists<br>Logitech Brand Team</p>
