--- a/safenet.html
+++ b/safenet.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 27 2017 22:55:35 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Nov 27 2017 23:13:47 GMT+0000 (UTC)  -->
 <html data-wf-page="59501935e77d092b5c335e60" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div class="landingbanner projpage safenet">
       <div class="fadeout logo"><a href="http://angelshiyaoyu.com" class="w-clearfix w-inline-block"><img src="images/Angel_Favicon_FadeOut-02.png" width="32" class="image-2"><div class="logotext projpage">angel yu</div></a></div>
       <div class="home nav"><a href="http://angel-yu.webflow.io/about" data-ix="new-interaction" class="home link projpage resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link projpage resume">resume / </a><a href="#Portfolio" class="home link projpage resume">work /</a></div>
-      <p class="projheading projpage">How can we reduce stress in housing emergencies?</p>
+      <p class="projheading projpage safenet">How can we reduce stress in housing emergencies?</p>
       <div class="projpagediv roles w-clearfix">
         <p class="projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Client<br xmlns="http://www.w3.org/1999/xhtml"></span>Carnegie Mellon University<br><br><span class="bold projpage roles">Duration</span><br>One week, 2017</p>
         <p class="projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Team</span><br>Angel Yu / Design and Research<br>Nila Banerjee / Design and Research</p>
