--- a/sumtotal.html
+++ b/sumtotal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 27 2017 22:55:35 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Nov 27 2017 23:13:47 GMT+0000 (UTC)  -->
 <html data-wf-page="59c3cef753c3d600013dadd1" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div class="landingbanner projpage sumtotal">
       <div class="fadeout logo"><a href="http://angelshiyaoyu.com" class="w-clearfix w-inline-block"><img src="images/Angel_Favicon_FadeOut-02.png" width="32" class="image-2"><div class="logotext projpage">angel yu</div></a></div>
       <div class="home nav"><a href="http://angel-yu.webflow.io/about" data-ix="new-interaction" class="home link projpage resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link projpage resume">resume / </a><a href="#Portfolio" class="home link projpage resume">work /</a></div>
-      <p class="projheading projpage">SumTotal<br>UI Redesign</p>
+      <p class="projheading projpage sumtotal">SumTotal<br>UI Redesign</p>
       <div class="projpagediv roles w-clearfix">
         <p class="fourcolumn projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Client<br xmlns="http://www.w3.org/1999/xhtml"></span>SumTotal <br>(A Skillsoft Company)</p>
         <p class="fourcolumn projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Duration</span><br>4 months, 2016</p>
@@ -35,7 +35,7 @@
       <p class="introtext projpage">SumTotal offers one of the top Human Capital Management (HCM) solutions in the industry. However they were losing marketshare over UX. SumTotal approached York &amp; Chapel with the hope of making their HCM suite intuitive and engaging to use. As one of the 18 designers on this project, I am responsible for designing the UI across Course Launch Player, Transcript, and Continuing Education. The product has been shipped and launched in 2016 (check out the product page <a href="http://www.sumtotalsystems.com/solutions/core-platform/" target="_blank" class="introtext link">here</a>).</p>
     </div>
     <div class="projpage projsection projshowcase">
-      <p class="designprocess projpage sectionlabels">here&#x27;s what I created</p><img src="images/SumTotal-OVerview.jpg" width="800" srcset="images/SumTotal-OVerview-p-800.jpeg 800w, images/SumTotal-OVerview-p-1080.jpeg 1080w, images/SumTotal-OVerview-p-1600.jpeg 1600w, images/SumTotal-OVerview-p-2000.jpeg 2000w, images/SumTotal-OVerview-p-2600.jpeg 2600w, images/SumTotal-OVerview.jpg 3115w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 92vw, 98vw" class="firstimage fullblownimage projpage projshowcase"><img src="images/SumTotal-OVerview2.jpg" width="800" srcset="images/SumTotal-OVerview2-p-1080.jpeg 1080w, images/SumTotal-OVerview2-p-1600.jpeg 1600w, images/SumTotal-OVerview2-p-2000.jpeg 2000w, images/SumTotal-OVerview2.jpg 2560w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 92vw, 98vw" class="fullblownimage lastimage projpage projshowcase"></div>
+      <p class="designprocess projpage sectionlabels">here&#x27;s what I created</p><img src="images/SumTotal-OVerview.jpg" width="800" srcset="images/SumTotal-OVerview-p-800.jpeg 800w, images/SumTotal-OVerview-p-1080.jpeg 1080w, images/SumTotal-OVerview-p-1600.jpeg 1600w, images/SumTotal-OVerview-p-2000.jpeg 2000w, images/SumTotal-OVerview-p-2600.jpeg 2600w, images/SumTotal-OVerview.jpg 3115w" sizes="100vw" class="firstimage fullblownimage projpage projshowcase"><img src="images/SumTotal-OVerview2.jpg" width="800" srcset="images/SumTotal-OVerview2-p-1080.jpeg 1080w, images/SumTotal-OVerview2-p-1600.jpeg 1600w, images/SumTotal-OVerview2-p-2000.jpeg 2000w, images/SumTotal-OVerview2.jpg 2560w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 92vw, 98vw" class="fullblownimage lastimage projpage projshowcase"></div>
     <a href="http://www.angelshiyaoyu.com/homeio" class="projsectionhomelinkblock w-inline-block">
       <div id="Work" class="home projsection">
         <div data-ix="scrollintoview-text" class="casestudy"><span class="home projname">home.io</span> / ux design / multimodal interaction / Service Robots / Health / Smart Home</div>
