--- a/homeio.html
+++ b/homeio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 27 2017 22:55:35 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Nov 27 2017 23:13:47 GMT+0000 (UTC)  -->
 <html data-wf-page="594094e124107c1ebce332fb" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div class="homeio landingbanner projpage">
       <div class="fadeout logo"><a href="http://angelshiyaoyu.com" class="w-clearfix w-inline-block"><img src="images/Angel_Favicon_FadeOut-02.png" width="32" class="image-2"><div class="logotext projpage">angel yu</div></a></div>
       <div class="home nav"><a href="http://angelshiyaoyu.com/about" data-ix="new-interaction" class="home link projpage resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link projpage resume">resume / </a><a href="http://www.angelshiyaoyu.com" class="home last link projpage resume">work /</a></div>
-      <p class="projheading projpage">What does it take to trust a robot that roams in your home?</p>
+      <p class="homeio projheading projpage">What does it take to trust a robot that roams in your home?</p>
       <div class="projpagediv roles w-clearfix">
         <p class="projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Client<br xmlns="http://www.w3.org/1999/xhtml"></span>Samsung Electronics<br><span class="bold projpage roles">Duration</span><br>8 months, 2017</p>
         <p class="projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Team</span><br>Angel Yu / Design Lead<br>Peggy Chau / Research Lead <br>Neil Bantoc / Prototyping Lead <br>Mark Micheli / Service Design <br>Kristina Wagner / User Testing</p>
