--- a/sumtotal.html
+++ b/sumtotal.html
@@ -22,7 +22,7 @@
   <div class="widescreen">
     <div class="landingbanner projpage sumtotal">
       <div class="fadeout logo"><a href="http://angelshiyaoyu.com" class="w-clearfix w-inline-block"><img src="images/Angel_Favicon_FadeOut-02.png" width="32" class="image-2"><div class="logotext projpage">angel yu</div></a></div>
-      <div class="home nav"><a href="http://angel-yu.webflow.io/about" data-ix="new-interaction" class="home link projpage resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link projpage resume">resume / </a><a href="#Portfolio" class="home link projpage resume">work /</a></div>
+      <div class="home nav"><a href="http://angelshiyaoyu.com/about" data-ix="new-interaction" class="home link projpage resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link projpage resume">resume / </a><a href="#Portfolio" class="home link projpage resume">work /</a></div>
       <p class="projheading projpage sumtotal">SumTotal<br>UI Redesign</p>
       <div class="projpagediv roles w-clearfix">
         <p class="fourcolumn projpage roles w-clearfix"><span class="projpage roles"></span><span class="bold projpage roles">Client<br xmlns="http://www.w3.org/1999/xhtml"></span>SumTotal <br>(A Skillsoft Company)</p>
