Mobile friendly update

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Nov 27 2017 23:13:47 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Nov 29 2017 21:50:56 GMT+0000 (UTC)  -->
 <html data-wf-page="59e6c896f0bf1f0001c97ec9" data-wf-site="5936d171eee8942f4c1b7856">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@
   <div class="widescreen">
     <div class="home landingbanner">
       <div class="logo"><a href="http://angelshiyaoyu.com" class="w-clearfix w-inline-block"><img src="images/Angel_Favicon-02.png" class="image-2"><div class="logotext">angel yu</div></a></div>
-      <div class="home nav"><a href="http://angel-yu.webflow.io/about" class="home link resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link resume">resume / </a><a href="#Work" class="home link resume">work /</a></div>
+      <div class="home nav"><a href="http://angelshiyaoyu.com/about" class="home link resume">about /</a><a target="_blank" href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" class="home link resume">resume / </a><a href="#Work" class="home link resume">work /</a></div>
     </div>
     <div class="homeintro section">
       <p data-ix="scrollintoview-text" class="homeintro">My background consists of a blend of reflective theoretical study and hands-on experience in interaction design and visual communication. Having accumulated 8 years in the design field, I now navigate between design skills, methodologies, and thinking with ease.<br><br>My current interest lies in exploring the role of visual communication in both the design process and design outcome. In my experience contributing to and leading UX projects, I&#x27;ve found it helpful having a fluency of visual skills. At a product level, visuals contribute to usability, communicate a product&#x27;s essence, and build emotional connections. At a team level, visual communication helps to synthesize learnings,  provoke discussions, and reach common understandings.<br><br>A few random questions I think about: / What kind of designers do I wish there to be in the world? / What is the essence of _________?/ How can I make my strengths available to others?  <br><br>To learn more about my experiences, <span class="aboutme link"><a href="https://drive.google.com/open?id=0BzKc8r98oxcidExNdTZIMkhndjA" target="_blank" class="aboutme link">here</a></span> is a link to my resume. I am currently looking for opportunities in holistic product design. Feel free to drop me a line at ysy_413@yahoo.com<span class="homeintro readmore"><a href="http://www.angelshiyaoyu.com/about" class="homeintro link"></a></span></p>
